Another slight update with a temp fix for About section on mobile browsers.

--- a/default.css
+++ b/default.css
@@ -149,8 +149,10 @@ a:hover {
         margin-right: 20px;
     }
     .section-wrapper {
-        width:95%;
         grid-template-columns: repeat(auto-fit, 320px);
+    }
+    .blurb-wrapper, .skills-wrapper {
+        grid-column: span 2;
     }
 }
 
@@ -162,6 +164,7 @@ a:hover {
     border: 0.5px solid var(--borderColor);
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 .form-label {
